src/test/resources/parser/invalid/coercion/arithmetic/mul.sbsc
0 * "hello";

return false;